Initial Commit for App. 100% class coverage for BowlingGameImpl